--- a/mapView.html
+++ b/mapView.html
@@ -31,8 +31,8 @@
 		treeLocation = new google.maps.LatLng(campusTrees[i][1], campusTrees[i][2]);
 		marker = new google.maps.Marker({
 			position: treeLocation,
-			map: map
-			url: campusTrees[i][3];
+			map: map,
+			url: campusTrees[i][3]
 		});
 		google.maps.event.addListener(marker, 'click', function() {
 			window.location.href= this.url;
