--- a/mapView.html
+++ b/mapView.html
@@ -1,3 +1,4 @@
+<!-- This file is part of server-side of the CampusTrees Project. It is subject to the license terms in the LICENSE file found in the top-level directory of this distribution. No part of CampusTrees Project, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the LICENSE file.-->
 
 <!DOCTYPE html>
 <html>
@@ -47,4 +48,3 @@
     <div id="map_canvas"></div>
   </body>
 </html>
-
